testsuite/tests/grammar/invalid_enum/test.out
== bad-alt/test.lkt ==
test.lkt:6:37: error: no such alternative
6 |     @main_rule main_rule <- Example.NoSuchAlt("example")
  |                                     ^^^^^^^^^


== bad-prefix/test.lkt ==
test.lkt:6:29: error: no entity called 'NoSuchNode' in scope for unit test.lkt
6 |     @main_rule main_rule <- NoSuchNode.Example1("example")
  |                             ^^^^^^^^^^


== no-dot/test.lkt ==
test.lkt:6:29: error: Parsers cannot create abstract nodes
6 |     @main_rule main_rule <- Example("example")
  |                             ^^^^^^^^^^^^^^^^^^


== ok/test.lkt ==
Code generation was successful

lkt_compile: Done
